Attempt to fix iframe issue on mobile again

--- a/wp-content/themes/melting_pot/css/membership.css
+++ b/wp-content/themes/melting_pot/css/membership.css
@@ -1532,6 +1532,10 @@ li.podcast-related-item .coursePrevImage {
 img, iframe {
 	max-width: 100%;
 }
+iframe {
+	width: 1px;
+  min-width: 100%;
+}
 .user-points-wrapper h2.gamipress-rank-title {
 	font-size: 1.5em;
 }
